--- a/templates/folder_view.html
+++ b/templates/folder_view.html
@@ -11,7 +11,7 @@
 
 {% block head %}
 <style>
-h1 .glyphicon, h2 .glyphicon {
+h1 .glyphicon, h3 .glyphicon {
   margin-right: 10px;
 }
   .folder_action, .project_action {
@@ -21,7 +21,7 @@ h1 .glyphicon, h2 .glyphicon {
     font-size: 13px;
     display: none;
   }
-    h1:hover .folder_action, h2:hover .project_action {
+    h1:hover .folder_action, h3:hover .project_action {
       display: inline-block;
     }
   .folder a:hover { text-decoration: none; }
@@ -74,9 +74,13 @@ h1 .glyphicon, h2 .glyphicon {
 
 {% for project in projects %}
   <div class="project" data-project-id="{{project.id}}">
-  <h2>
+  <h3>
   <a href="{{project.get_absolute_url}}">
+    {% if project.root_task.get_app_icon_url %}
+    <img src="{{project.root_task.get_app_icon_url}}" width="64">
+    {% else %}
     <span class="glyphicon glyphicon-list-alt"></span>
+    {% endif %}
     <span class="project_title">{{project.title}}</span>
 
     {# how many open tasks for the user? #}
