--- a/templates/module-finished.html
+++ b/templates/module-finished.html
@@ -73,7 +73,7 @@ thead {
       {% if task.project.is_account_project %}
         {# there is nothing else in the account settings project #}
         <p><a id="return-to-projects" href="/projects" class="btn btn-success">
-          Return to Assessments &raquo;
+          Return to Projects &raquo;
         </a></p>
       {% else %}
         {% if answers_question.task == answers_question.task.project.root_task %}
