--- a/templates/base.html
+++ b/templates/base.html
@@ -114,8 +114,8 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a href="/">Home</a></li>
-                <li><a href="/projects">Assessments</a></li>
-                <li><a href="/assessment-catalog">App Store</a></li>
+                <li><a href="/projects">Project Folders</a></li>
+                <li><a href="/store">App Store</a></li>
                 {% if user.can_see_org_settings or user.is_staff %}
                   <li role="separator" class="divider"></li>
                 {% endif %}
