--- a/templates/project.html
+++ b/templates/project.html
@@ -405,10 +405,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="project_settings_title">Project Settings</h4>
+        <h4 class="modal-title" id="project_settings_title">{{project.title}} Settings</h4>
       </div>
       <div class="modal-body">
-        <h3>Participants</h3>
+        <h4>Participants</h4>
 
               <div style="margin-bottom: 1em">
                 <div id="project-members">
@@ -451,11 +451,11 @@
             {% endif %}
 
       {% if project.is_deletable and is_admin %}
-        <h3>Project Details</h3>
+        <h4>Project Details</h4>
           <p><button class="btn btn-default" onclick="return rename_project();">Change Project Title</button></p>
           <p><button class="btn btn-danger" onclick="return delete_project();">Delete Project</button></p>
 
-        <h3>Share Data</h3>
+        <h4>Share Data</h4>
               {# export #}
               <form method="post" action="{% url "export_project" project.id %}">{% csrf_token %}
                 <button class="btn btn-success" style="margin-bottom: 1em">
