--- a/templates/folder_view.html
+++ b/templates/folder_view.html
@@ -57,7 +57,7 @@ h1 .glyphicon, h3 .glyphicon {
 {% block contextbar %}{% endblock %}
 
 {% block body %}
-<div style="float: right; margin-top: 1em">
+<div style="float: right; margin: 1em 0;">
   <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> Add app to project folder</a>
 </div>
 
