--- a/templates/folder_list.html
+++ b/templates/folder_list.html
@@ -42,7 +42,7 @@ Project Folders
 {% block contextbar %}{% endblock %}
 
 {% block body %}
-<div style="float: right; margin-top: 1em">
+<div style="float: right; margin: 1em 0;">
   <a id="new-folder" href="#" class="btn btn-default" onclick="new_folder(); return false;"><i class="glyphicon glyphicon-folder-open"></i> New Folder</a>
   <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> Add app to project folder</a>
 </div>
