Shorten text of Add app button

--- a/templates/folder_list.html
+++ b/templates/folder_list.html
@@ -44,7 +44,7 @@ Project Folders
 {% block body %}
 <div style="float: right; margin: 1em 0;">
   <a id="new-folder" href="#" class="btn btn-default" onclick="new_folder(); return false;"><i class="glyphicon glyphicon-folder-open"></i> New Folder</a>
-  <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-list-alt"></i> Add app to project folder</a>
+  <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add app </a>
 </div>
 
 <h1>Project Folders</h1>
