--- a/templates/base.html
+++ b/templates/base.html
@@ -214,7 +214,7 @@
 
     {% block body-wide %}
     <div class="container-fluid">
-      <div class="container" style="min-height: 80%; margin-top: 2em;">
+      <div class="container" style="min-height: 400px; margin-top: 2em;">
       {% block body %}
       {% endblock %}
 
